# discord-bot

./: .env.template  .gitignore  README.md  pyproject.toml
src/codeseoul_discord_bot/: client.py  main.py
